Prod-EU/force-app/main/default/objects/Benefit__c/Benefit__c.object-meta.xml
<CustomObject>
    <description>Jagan 03/29/2017 - Created this custom object to track Benefits information.</description>
    <label>Benefit</label>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>