Prod-EU/force-app/main/default/objects/Benefit__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Store the account number for selected account on benefit</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>