Prod-EU/force-app/main/default/objects/Benefit__c/fields/Applicable_Birth_Date_in_US_Format__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Birth_Date_in_US_Format__c</fullName>
    <formula>If(NOT(ISNULL(Primary_Policy_Holder_Birth_Date__c)), TEXT(MONTH(Primary_Policy_Holder_Birth_Date__c))+&quot;/&quot; +TEXT(DAY(Primary_Policy_Holder_Birth_Date__c))+&quot;/&quot; +TEXT(YEAR(Primary_Policy_Holder_Birth_Date__c)),
 If(TEXT( Insurance_Holder_s_Relationship__c) = &quot;Self&quot;, TEXT(MONTH(Account__r.PersonBirthdate))+&quot;/&quot; +TEXT(DAY(Account__r.PersonBirthdate))+&quot;/&quot; +TEXT(YEAR(Account__r.PersonBirthdate)), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicable Birth Date in US Format</label>
    <type>Text</type>
</CustomField>