Prod-EU/force-app/main/default/objects/Benefit__c/fields/Auth_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Auth_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Start Date</label>
    <type>Date</type>
</CustomField>