Prod-EU/force-app/main/default/objects/Benefit__c/fields/Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>