Prod-EU/force-app/main/default/objects/Benefit__c/fields/Benefit_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Hierarchy__c</fullName>
    <label>Benefit Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>