Prod-EU/force-app/main/default/objects/Benefit__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <formula>Account__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>