Prod-EU/force-app/main/default/objects/Benefit__c/fields/CA_Benefit_Plan_Year_Type__c.field-meta.xml
<CustomField>
    <fullName>CA_Benefit_Plan_Year_Type__c</fullName>
    <description>Benefit Year or Plan Year</description>
    <inlineHelpText>Benefit Year or Plan Year</inlineHelpText>
    <label>Benefit Plan Year Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plan Year</fullName>
            </value>
            <value>
                <fullName>Benefit Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>