Prod-EU/force-app/main/default/objects/Benefit__c/fields/Claims_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Claims_Mailing_Address__c</fullName>
    <formula>IF ( !ISBLANK(Claims_Mailing_Address_Name__c), (Claims_Mailing_Address_Name__r.Address_Line_1__c + &apos;, &apos; + 
 Claims_Mailing_Address_Name__r.City__c  + &apos;, &apos; +
 TEXT(Claims_Mailing_Address_Name__r.State__c) + &apos;, &apos; +
 Claims_Mailing_Address_Name__r.Postal_Code__c + &apos;, &apos; +
 TEXT(Claims_Mailing_Address_Name__r.Country__c) ), &apos;&apos; )</formula>
    <label>Claims Mailing Address</label>
    <type>Text</type>
</CustomField>