Prod-EU/force-app/main/default/objects/Benefit__c/fields/Claims_Mailing_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Claims_Mailing_Address_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Claims mailing address from the payor associated to the Benefit record.</description>
    <label>Claims Mailing Address Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Payor__c</field>
            <operation>equals</operation>
            <valueField>Address__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Payor Address</relationshipLabel>
    <relationshipName>Payor_Address</relationshipName>
    <type>Lookup</type>
</CustomField>