Prod-EU/force-app/main/default/objects/Benefit__c/fields/CMN_or_Rx_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CMN_or_Rx_Expiration_Date__c</fullName>
    <formula>Account__r.CMN_or_Rx_Expiration_Date__c</formula>
    <label>CMN or Rx Expiration Date</label>
    <type>Date</type>
</CustomField>