Prod-EU/force-app/main/default/objects/Benefit__c/fields/Cost_Estimate_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Received_Date__c</fullName>
    <description>Date when we received the cost estimate back from EGEKO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Estimate Received Date</label>
    <type>Date</type>
</CustomField>