Prod-EU/force-app/main/default/objects/Benefit__c/fields/Cost_Estimate_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Sent_Date__c</fullName>
    <description>Date when cost estimate was sent to EGEKO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Estimate Sent Date</label>
    <type>Date</type>
</CustomField>