Prod-EU/force-app/main/default/objects/Benefit__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>