Prod-EU/force-app/main/default/objects/Benefit__c/fields/Customer_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Service Phone</label>
    <type>Phone</type>
</CustomField>