Prod-EU/force-app/main/default/objects/Benefit__c/fields/EGEKO_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Confirmation_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>