Prod-EU/force-app/main/default/objects/Benefit__c/fields/EGEKO_IK_Number__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_IK_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IK Number Sent By EGEKO</label>
    <length>15</length>
    <type>Text</type>
</CustomField>