Prod-EU/force-app/main/default/objects/Benefit__c/fields/EGEKO_Kopftext__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Kopftext__c</fullName>
    <description>Text will be transferred to EGEKO</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EGEKO Kopftext</label>
    <length>100</length>
    <type>Text</type>
</CustomField>