Prod-EU/force-app/main/default/objects/Benefit__c/fields/EGEKO_Refusal_Text__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Refusal_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refusal Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>