Prod-EU/force-app/main/default/objects/Benefit__c/fields/EGEKO_Status__c.field-meta.xml
<CustomField>
    <fullName>EGEKO_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>