Prod-EU/force-app/main/default/objects/Benefit__c/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <description>Name of the Employer of the Policy Holder.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Employer of the Policy Holder.</inlineHelpText>
    <label>Employer Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>