Prod-EU/force-app/main/default/objects/Benefit__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents whether the Benefit is still active for the Account Holder.</description>
    <inlineHelpText>Inactivate the Benefit if the Payor or number is changed.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>