Prod-EU/force-app/main/default/objects/Benefit__c/fields/Insurance_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_ID__c</fullName>
    <description>Insurance Group ID/Number.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insurance Group ID/Number.</inlineHelpText>
    <label>Insurance Group ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>