Prod-EU/force-app/main/default/objects/Benefit__c/fields/Insurance_Health_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Health_Plan_Number__c</fullName>
    <description>Optional Health Plan Number/ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional Health Plan Number/ID.</inlineHelpText>
    <label>Insurance Health Plan Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>