Prod-EU/force-app/main/default/objects/Benefit__c/fields/Insurance_Holder_s_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Holder_s_Relationship__c</fullName>
    <label>Insurance Holder&apos;s Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>