Prod-EU/force-app/main/default/objects/Benefit__c/fields/Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Message__c</fullName>
    <description>This field tracks the error message during the time of BOOMI integration with EGEKO.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>