Prod-EU/force-app/main/default/objects/Benefit__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Title of the Policy Holder</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Title of the Policy Holder</inlineHelpText>
    <label>Job Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>