Prod-EU/force-app/main/default/objects/Benefit__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>