Prod-EU/force-app/main/default/objects/Benefit__c/fields/Other_Authorization_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Authorization_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Authorization Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>