Prod-EU/force-app/main/default/objects/Benefit__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account with Payer record type</description>
    <label>Payor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>Payor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payors</relationshipLabel>
    <relationshipName>Payors</relationshipName>
    <type>Lookup</type>
</CustomField>