Prod-EU/force-app/main/default/objects/Benefit__c/fields/Policy_Holder_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Date_of_Birth__c</fullName>
    <formula>Account__r.PersonContact.Birthdate</formula>
    <label>Policy Holder Date of Birth</label>
    <type>Date</type>
</CustomField>