Prod-EU/force-app/main/default/objects/Benefit__c/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <formula>Account__r.FirstName + &apos; &apos; + Account__r.LastName</formula>
    <label>Policy Holder Name</label>
    <type>Text</type>
</CustomField>