Prod-EU/force-app/main/default/objects/Benefit__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <description>Insurance Payer or Issuer ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Insurance Payer or Issuer ID</inlineHelpText>
    <label>Policy Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>