Prod-EU/force-app/main/default/objects/Benefit__c/fields/Pre_Auth_Spoke_With__c.field-meta.xml
<CustomField>
    <fullName>Pre_Auth_Spoke_With__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Auth Spoke With</label>
    <length>150</length>
    <type>Text</type>
</CustomField>