Prod-EU/force-app/main/default/objects/Benefit__c/fields/Primary_Policy_Holder_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Policy_Holder_Birth_Date__c</fullName>
    <description>Date of Birth of Person Holding insurance if different from Name on Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date of Birth of Person Holding insurance if different from Name on Account.</inlineHelpText>
    <label>Primary Policy Holder Birth Date</label>
    <type>Date</type>
</CustomField>