Prod-EU/force-app/main/default/objects/Benefit__c/fields/Primary_Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Policy_Holder_Name__c</fullName>
    <description>Name of the Insurance Policy Holder if different from Name on Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Insurance Policy Holder if different from Name on Account.</inlineHelpText>
    <label>Primary Policy Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>