Prod-EU/force-app/main/default/objects/Benefit__c/fields/Prior_Auth_Denied_or_Approved__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Denied_or_Approved__c</fullName>
    <label>Prior-Auth Denied or Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>DENIED</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>