Prod-EU/force-app/main/default/objects/Benefit__c/fields/Provider_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Provider_Service_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Service Phone</label>
    <type>Phone</type>
</CustomField>