Prod-EU/force-app/main/default/objects/Benefit__c/fields/Receiver_Max__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Max__c</fullName>
    <description>Maximum Amount allowed for Receivers during the Authorized Period</description>
    <inlineHelpText>Maximum Amount allowed for Receivers during the Authorized Period</inlineHelpText>
    <label>Receiver Max $</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>