Prod-EU/force-app/main/default/objects/Benefit__c/fields/Receiver_Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Max_Qty__c</fullName>
    <description>Maximum number of Receivers allowed during the Authorized Period</description>
    <inlineHelpText>Maximum number of Receivers allowed during the Authorized Period</inlineHelpText>
    <label>Receiver Max Qty</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>