Prod-EU/force-app/main/default/objects/Benefit__c/fields/Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Reason__c</fullName>
    <description>Field used to track when the EGEKO status is changed</description>
    <label>Review Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval to Rejection</fullName>
            </value>
            <value>
                <fullName>Rejection to Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>