Prod-EU/force-app/main/default/objects/Benefit__c/fields/Rx_Date_Written__c.field-meta.xml
<CustomField>
    <fullName>Rx_Date_Written__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rx Date Written</label>
    <type>Date</type>
</CustomField>