Prod-EU/force-app/main/default/objects/Benefit__c/fields/Transmitter_Max__c.field-meta.xml
<CustomField>
    <fullName>Transmitter_Max__c</fullName>
    <description>Maximum Amount allowed for Transmitters during the Authorized Period</description>
    <inlineHelpText>Maximum Amount allowed for Transmitters during the Authorized Period</inlineHelpText>
    <label>Transmitter Max $</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>