Prod-EU/force-app/main/default/objects/Benefit__c/recordTypes/CA_Benefit.recordType-meta.xml
<RecordType>
    <fullName>CA_Benefit</fullName>
    <active>true</active>
    <description>Benefit for Canada</description>
    <label>CA Benefit</label>
</RecordType>