Prod-EU/force-app/main/default/objects/Benefit__c/recordTypes/DE_Benefit.recordType-meta.xml
<RecordType>
    <fullName>DE_Benefit</fullName>
    <active>true</active>
    <description>Germany Benefits</description>
    <label>DE Benefit</label>
</RecordType>