Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/Auth_End_Date_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Auth_End_Date_Greater_Than_Start_Date</fullName>
    <active>false</active>
    <description>Rule to check if the auth end date should be greater than auth start date</description>
    <errorConditionFormula>Auth_Start_Date__c &gt;  Auth_End_Date__c</errorConditionFormula>
    <errorMessage>Auth End Date should be greater than Auth Start Date.</errorMessage>
</ValidationRule>