Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/CA_Policy_Holder_Age_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_Policy_Holder_Age_Required</fullName>
    <active>true</active>
    <description>Policy Holder Age is required if the relationship with the Policy Holder is not &apos;Self&apos;.</description>
    <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
NOT(ISPICKVAL( Insurance_Holder_s_Relationship__c, &apos;Self&apos;)),
ISBLANK(  Primary_Policy_Holder_Birth_Date__c ))</errorConditionFormula>
    <errorMessage>Policy Holder Age is also required if the relationship with the Policy Holder is not &apos;Self&apos;.</errorMessage>
</ValidationRule>