Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/DE_Auth_End_Date_Greater_Dan_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Auth_End_Date_Greater_Dan_Start_Date</fullName>
    <active>true</active>
    <description>Rule to check if the auth end date should be greater than auth start date</description>
    <errorConditionFormula>AND( 
   BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
Auth_Start_Date__c &gt;  Auth_End_Date__c
)</errorConditionFormula>
    <errorMessage>Auth End Date should be greater than Auth Start Date.</errorMessage>
</ValidationRule>