Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/DE_Member_Id_Should_B_10_Char_In_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Member_Id_Should_B_10_Char_In_Length</fullName>
    <active>true</active>
    <description>Member Id tied to Benefit should be 10 characters in length</description>
    <errorConditionFormula>AND(
   BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
ISNEW(),
NOT (ISBLANK( Member_Id__c )),
NOT ( LEN(Member_Id__c) = 10 ) 
)</errorConditionFormula>
    <errorMessage>&apos;Member Id&apos; should be 10 characters in Length.</errorMessage>
</ValidationRule>