Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/DE_Req_Fields_Check_For_Benefit_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>DE_Req_Fields_Check_For_Benefit_Create</fullName>
    <active>true</active>
    <description>Check on the required fields for Benefits creation for Germany Benefits.</description>
    <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;),
        BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
	OR (
		ISBLANK(Member_Id__c),
		ISBLANK(Payor__c),
		ISBLANK(TEXT(Benefit_Hierarchy__c))
	)
)</errorConditionFormula>
    <errorMessage>Member Id, Payor, Benefit Hierarchy information are required to save a Benefit.</errorMessage>
</ValidationRule>