Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/Member_Id_Should_Be_10_Chars_In_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Id_Should_Be_10_Chars_In_Length</fullName>
    <active>false</active>
    <description>Member Id tied to Benefit should be 10 characters in length</description>
    <errorConditionFormula>AND(
ISNEW(),
NOT (ISBLANK( Member_Id__c )),
NOT ( LEN(Member_Id__c) = 10 ) 
)</errorConditionFormula>
    <errorMessage>&apos;Member Id&apos; should be 10 characters in Length.</errorMessage>
</ValidationRule>