Prod-EU/force-app/main/default/objects/Benefit__c/validationRules/Required_Fields_Check_For_Benefit_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_Check_For_Benefit_Create</fullName>
    <active>false</active>
    <description>Check on the required fields for Benefits creation for Germany Benefits.</description>
    <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
	RecordType.DeveloperName = &apos;DE_Benefit&apos;,
	OR (
		ISBLANK(Member_Id__c),
		ISBLANK(Payor__c),
		ISBLANK(TEXT(Benefit_Hierarchy__c))
	)
)</errorConditionFormula>
    <errorMessage>Member Id, Payor, Benefit Hierarchy information are required to save a Benefit.</errorMessage>
</ValidationRule>