Prod-EU/force-app/main/default/objects/Benefit__c/listViews/CA_Benefits.listView-meta.xml
<ListView>
    <fullName>CA_Benefits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Benefit__c.CA_Benefit</value>
    </filters>
    <label>CA Benefits</label>
</ListView>